--- a/src/styles.css
+++ b/src/styles.css
@@ -1,169 +1,62 @@
-* {
+body {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-tap-highlight-color: transparent;
-  font-family: Helvetica;
-}
-
-.container {
-  display: flex;
-  margin: auto;
-  flex-direction: column;
   padding: 20px;
-  width: 500px;
-  max-width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-label {
-  font-weight: bold;
-  margin: 8px 0;
-}
-
-textarea {
-  min-height: 100px;
-  border: 2px solid hsla(0, 0%, 60%, 0.4);
-  margin-bottom: 10px;
-  padding: 8px;
-  font-size: 14px;
-  width: 100%;
-}
-
-textarea:focus {
-  outline: 0;
-}
-
-button {
-  color: #fff;
-  background-color: #658d1b;
-  font-size: 14px;
-  height: 49px;
-  width: 88px;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-  display: block;
-}
-
-button:focus {
-  outline: 0;
-}
-
-button:hover {
-  background-color: #749831;
-}
-
-.error-container {
-  display: flex;
-}
-
-.error-icon {
-  margin-right: 3px;
-  padding: 1px;
-}
-
-.errorMsg {
-  color: black;
-  margin-bottom: 8px;
-  font-weight: bold;
+small {
+  color: red;
+  margin-bottom: 5px;
 }
 
 .errorBorder {
-  border-color: #cd0d15;
+  border: 1px solid red;
 }
 
-.charCount {
-  font-weight: bold;
-  align-self: flex-end;
-  font-size: 12px;
-}
-
-.charCount span {
-  position: relative;
-}
-
-/* .tooltip {
-  position: relative;
-} */
-
-/* .tooltip-container {
-  position: absolute;
-  right: 4px;
-  top: 0px;
-} */
-
-/* .tooltip .tooltip-arrow {
-  position: absolute;
-  left: 50%;
-  top: -10px;
-  transform: translateX(-50%);
-  border-width: 10px 8px 0 8px;
-  border-style: solid;
-  border-color: #37474e transparent transparent transparent;
-  z-index: 100;
-  opacity: 1;
-} */
-
-/* .tooltip .tooltip-body {
-  position: absolute;
-  padding: 10px 10px;
-  left: 50%;
-  top: -10px;
-  transform: translateX(-50%) translateY(-100%);
-  background: #37474e;
-  text-align: center;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  width: 100px;
-  pointer-events: none;
-  opacity: 1;
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.08), 0 6px 10px 0 rgba(0, 0, 0, 0.12);
-  transition: transform 0.15s;
-} */
-
-.charCount span.max::after {
-  content: attr(tooltip);
-  position: absolute;
-  padding: 10px 10px;
-  left: 50%;
-  top: -8px;
-  transform: translateX(-80%) translateY(-100%);
-  background: #37474e;
-  text-align: center;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  width: 100px;
-  pointer-events: none;
-  opacity: 1;
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.08), 0 6px 10px 0 rgba(0, 0, 0, 0.12);
-  transition: transform 0.15s;
-}
-
-.charCount span.max::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: -10px;
-  transform: translateX(-50%);
-  border-width: 10px 8px 0 8px;
-  border-style: solid;
-  border-color: #37474e transparent transparent transparent;
-  z-index: 100;
-  opacity: 1;
-}
-
-/* @media only screen and (max-width: 500px) {
-  .charCount span.max::after {
-    transform: translateX(-90%) translateY(-100%);
-  }
-} */
-
-.bottom {
+.container {
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px solid black;
   display: flex;
-  justify-content: space-between;
+  width: 400px;
+  flex-direction: column;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin: 5px 0;
+  font-weight: bold;
+}
+
+input {
+  padding: 8px;
+  border-radius: 3px;
+  border: 1px solid skyblue;
+  margin: 10px 0;
+}
+
+button {
+  background-color: #fff;
+  border: 1px solid rgb(221, 221, 221);
+  padding: 8px 12px;
+  font-size: 16px;
+  border-radius: 3px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(236, 236, 236);
+}
+
+.line {
+  background-color: black;
+  margin: 3px 0 10px 0;
+  width: 100%;
+  height: 1px;
+  padding: 0;
 }
